<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.crdir.iMemo.MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#79797A" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/memoButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:button="@null"
            android:drawableTop="@drawable/memo_button_drawable"
            android:gravity="center"
            android:text="@string/btn_memo"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:button="@null"
            android:drawableTop="@drawable/add_button_drawable"
            android:gravity="center"
            android:onClick="add"
            android:text="@string/btn_add"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/usrButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:button="@null"
            android:drawableTop="@drawable/usr_button_drawable"
            android:gravity="center"
            android:text="@string/btn_usr"
            android:textSize="12sp" />

    </RadioGroup>

</LinearLayout>
