<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_bg"
    android:fadingEdge="vertical"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_bg_white_10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewOfUsr"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"

                tools:srcCompat="@drawable/usr_btn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usrNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/usr_name"
                    android:textColor="#333434"
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/usrOtherInfoLabel"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/usr_otherInfo"
                    android:textColor="#333434"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="#0FB9A9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CurrentLabelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/currentLabelTitle"
                android:textColor="#ffffff"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/CurrentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:onClick="openCurrentTransaction"
                android:text="@string/currentLabel"
                android:textColor="#ffffff"
                android:textSize="22dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="#00000000"
                android:onClick="setUsrInfo"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:onClick="setUsrInfo"
                android:text="@string/settingTint"
                android:textSize="16sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dcdcdc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_share_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/shareTint"
                android:textSize="16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dcdcdc" />


    </LinearLayout>
</ScrollView>